[Jason] feat : uc11 integrate redis caching and messaging into service layer